--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -66,28 +66,7 @@
     transform: scale(1.10);
   }
 }
-@media screen and (max-width: 768px) {
-  .about-content {
-    flex-direction: column;
-  }
-  .hero {
-    min-height: 60vh;
-    h1 {
-      font-size: 34px;
-      padding: 0 14px;
-      width: 100%;
-    }
-    p {
-      font-size: 14px;
-    }
-  }
-}
-@media screen and (max-width: 480px) {
-  .hero h1 {
-    font-size: 24px;
-  }
-  
-}
+
 .about {
   background-color: $primary-normal;
   overflow: hidden;
@@ -115,4 +94,150 @@
     margin-bottom: 14px;
     line-height: 150%;
   }
+}
+
+// services
+
+.services {
+  background-color: $white-normal;
+  overflow: hidden;
+  color: $black-normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 54px 14px;
+
+}
+.services-content h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 38px;
+  margin-bottom: 14px;
+}
+.services-content p {
+  line-height: 150%;
+  margin-bottom: 14px;
+  text-align: center;
+  max-width: 780px;
+}
+.haircuts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 0 44px 34px 44px;
+
+}
+.haircut {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: $white-normal;
+  border-radius: 8px;
+ box-shadow: 0px -1px 17px -4px rgba(0,0,0,0.5);
+ overflow: hidden;
+  img {
+    width: 100%;
+    max-width: 354px;
+    transition: transform 0.2s;
+  }
+}
+.haircut img:hover  {
+  transform: scale(1.2);
+  z-index: 1;
+}
+.haircut-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 14px;
+  background-color: $white-normal;
+  z-index: 99;
+}
+.haircut-info button {
+  background-color: $red-normal;
+  color: $white-normal;
+  border: 0;
+  border-radius: 4px;
+  padding: 4px 8px;
+  cursor: default;
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 54px 0;
+  gap: 24px;
+  color: $white-normal;
+}
+.footer-icons {
+  display: flex;
+  gap: 8px;
+  color: $white-normal;
+}
+.btn-whtapp {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  z-index: 99;
+  img {
+    max-width: 74px;
+    transition: transform 0.4s;
+  }
+  img:hover {
+    transform: scale(1.1);
+  }
+}
+.btn-whtapp .tooltip-text {
+  background-color: $black-normal;
+  visibility: hidden;
+  position: absolute;
+  width: 120px;
+  top: 0;
+  padding: 6px;
+  border-radius: 8px;
+  text-align: center;
+  left: -144px;
+  color: $white-normal;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.btn-whtapp:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+@media screen and (max-width: 768px) {
+  .about-content {
+    flex-direction: column;
+  }
+  .hero {
+    min-height: 60vh;
+    h1 {
+      font-size: 34px;
+      padding: 0 14px;
+      width: 100%;
+    }
+    p {
+      font-size: 14px;
+    }
+  }
+  .haircuts {
+   flex-direction: column;
+  }
+  .haircuts img {
+    max-width: 740px;
+  }
+  .btn-whtapp {
+    img {
+      max-width: 64px;
+    }
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero h1 {
+    font-size: 24px;
+  }
+  
 }
